Modularize adapter-jdbc
Add dependency on Jackson's yaml module at test-time only.